Add a user profile logic with avatars
